--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -22,14 +22,22 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml     
     - name: Deploy to Heroku
-  # You may pin to the exact commit or the version.
-  # uses: AkhileshNS/heroku-deploy@79ef2ae4ff9b897010907016b268fd0f88561820
       uses: AkhileshNS/heroku-deploy@v3.12.12
       with:
-        # This will be used for authentication. You can find it in your heroku homepage account settings
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        # Email that you use with heroku
         heroku_email: ${{secrets.HEROKU_EMAIL}}
-        # The appname to use for deploying/updating
         heroku_app_name: ${{secrets.HEROKU_APP}}
