--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Push Docker image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
         image: ${{ secrets.DOCKER_IMAGE }}
         tags: latest
         registry: docker.io
