--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -22,15 +22,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v5
+    - name: Publish to Docker Hub
+      uses: docker/build-push-action@v1
       with:
-        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-        image: ${{ secrets.DOCKER_IMAGE }}
-        tags: latest
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+       username: ${{ secrets.DOCKER_HUB_USERNAME }}
+       password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+       repository: dockerHubUser/dockerHubRepository
+       tags: ${{github.run_number}}
       
   deploy:
     needs: build
